package com.restaurante.tema;

public interface Botao {
    String getEstilo();
    String getClasse();
    String getTexto();
}