package com.restaurante.tema;

public interface Cor {
    String getCorPrimaria();
    String getCorSecundaria();
    String getCorFundo();
    String getCorTexto();
}