package com.restaurante.tema;

public interface Icone {
    String getIconeHome();
    String getIconeUsuario();
    String getIconeConfig();
    String getIconeRelatorio();
}